feature： 升级GWIot的版本，以及YooseeKit的版本

--- a/android/demo/app/src/main/res/layout/activity_main.xml
+++ b/android/demo/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,10 @@
         android:onClick="startMonitor"
         android:text="开启监控" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="getDeviceList"
+        android:text="获取设备列表" />
+
 </LinearLayout>
