--- a/android/demo/app/src/main/res/layout/activity_main.xml
+++ b/android/demo/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,13 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="recognizeQRCode"
+        android:text="识别二维码" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:onClick="openHome"
         android:text="开启监控" />
 
