feature： 更新插件版本

--- a/android/demo/app/src/main/res/layout/activity_main.xml
+++ b/android/demo/app/src/main/res/layout/activity_main.xml
@@ -58,9 +58,16 @@
         android:layout_height="wrap_content"
         android:onClick="loginOut"
         android:text="退出登录" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="openEvents"
         android:text="打开智能守护" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="openShareManager"
+        android:text="打开共享管理" />
 </LinearLayout>
